--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
-apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 
 android {
@@ -24,12 +24,80 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    lintOptions {
+        disable 'InvalidPackage'
+        abortOnError false
+    }
+
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    final TEST_RUNNER_VERSION = '0.5'
+    final TEST_RULES_VERSION = '0.5'
+    final JUNIT_VERSION = '4.12'
+    final ESPRESSO_VERSION = '2.2.1'
+    final MOCKITO_VERSION = '1.10.19'
+    final POWERMOCK_VERSION = '1.6.5'
+    final HAMCREST_VERSION = '1.3'
+    final SUPPORT_LIBRARY_VERSION = '24.2.1'
+    final RX_ANDROID_VERSION = '1.2.1'
+    final RX_JAVA_VERSION = '1.1.6'
+    final DAGGER_VERSION = '2.0'
+    final DAGGER_COMPILER_VERSION = '2.0'
+    final ANNOTATION_VERSION = '1.0'
+
     compile project(':sanselanandroid')
+
+    androidTestCompile "com.android.support.test.espresso:espresso-core:$ESPRESSO_VERSION"
+    androidTestCompile "com.android.support.test:runner:$TEST_RUNNER_VERSION"
+    androidTestCompile "com.android.support.test:rules:$TEST_RULES_VERSION"
+
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: "$HAMCREST_VERSION"
+
+    testCompile("org.mockito:mockito-core:$MOCKITO_VERSION") {
+        exclude group: "org.hamcrest"
+    }
+    testCompile("junit:junit:$JUNIT_VERSION") {
+        exclude group: 'org.hamcrest'
+        exclude group: 'org.objenesis'
+    }
+    testCompile("org.powermock:powermock:$POWERMOCK_VERSION") {
+        exclude group: 'org.objenesis'
+        exclude group: 'org.junit'
+        exclude group: 'org.hamcrest'
+        exclude group: 'org.mockito'
+    }
+    testCompile("org.powermock:powermock-module-junit4:$POWERMOCK_VERSION") {
+        exclude group: 'org.objenesis'
+        exclude group: 'org.junit'
+        exclude group: 'org.hamcrest'
+        exclude module: 'powermock-core'
+        exclude group: 'org.mockito'
+    }
+    testCompile("org.powermock:powermock-api-mockito:$POWERMOCK_VERSION") {
+        exclude group: 'org.objenesis'
+        exclude group: 'org.junit'
+        exclude group: 'org.hamcrest'
+        exclude group: 'org.mockito'
+    }
+
+    compile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
+    testCompile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
+    androidTestCompile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
+
     compile 'agency.tango.android:material-intro-screen:0.0.3'
+    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+    compile "io.reactivex:rxandroid:$RX_ANDROID_VERSION"
+    compile "io.reactivex:rxjava:$RX_JAVA_VERSION"
+    compile "com.google.dagger:dagger:$DAGGER_VERSION"
+    apt "com.google.dagger:dagger-compiler:$DAGGER_COMPILER_VERSION"
+    provided "javax.annotation:jsr250-api:$ANNOTATION_VERSION"
 }
