--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     final DAGGER_VERSION = '2.0'
     final DAGGER_COMPILER_VERSION = '2.0'
     final ANNOTATION_VERSION = '1.0'
+    final GLIDE_VERSION = '3.7.0'
 
     compile project(':sanselanandroid')
 
@@ -100,4 +101,6 @@ dependencies {
     compile "com.google.dagger:dagger:$DAGGER_VERSION"
     apt "com.google.dagger:dagger-compiler:$DAGGER_COMPILER_VERSION"
     provided "javax.annotation:jsr250-api:$ANNOTATION_VERSION"
+    compile "com.github.bumptech.glide:glide:$GLIDE_VERSION"
+    compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
 }
